Final structure fix

--- a/cv.html
+++ b/cv.html
@@ -1,67 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Character encoding for consistent text rendering -->
   <meta charset="UTF-8">
-
-  <!-- Page title shown in browser tab and announced by screen readers -->
-  <title>Don Norman – CV</title>
+  <title>Norman – Curriculum Vitae</title>
 </head>
 <body>
 
-  <!-- Page header: identifies the page -->
   <header>
-    <h1>Curriculum Vitae</h1>
+    <h1>Norman’s Contributions in HCI</h1>
   </header>
 
-  <!-- Primary navigation: consistent across all pages -->
   <nav aria-label="Primary navigation">
     <ul>
-      <li><a href="index.html">Home</a></li>
-
-      <!-- Current page is indicated using aria-current -->
-      <li><a href="cv.html" aria-current="page">CV</a></li>
-
+   <li><a href="index.html" aria-current="page">Home</a></li>
+      <li><a href="cv.html">CV</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="analysis.html">Interaction Analysis</a></li>
       <li><a href="norman2klm.html">Norman–GOMS–KLM</a></li>
+      <li><a href="comparison.html">HCI Model Comparison</a></li>
+      <li><a href="error&correction.html">HTML Errors & Correction</a></li>
+      <li><a href="model.html">Worked Examples / Model</a></li>
       <li><a href="assignment01.html">Lab 01 Rules</a></li>
-
     </ul>
   </nav>
 
-  <!-- Main landmark: unique content of this page -->
   <main>
 
     <section>
-      <h2>Education</h2>
+      <h2>Education & Background</h2>
       <ul>
-        <li>PhD in Psychology – University of Pennsylvania</li>
-        <li>BSc in Engineering – MIT</li>
+        <li>Studied Psychology and Cognitive Science – foundation for understanding user behavior</li>
+        <li>Engineering knowledge helped in design of interactive systems</li>
       </ul>
     </section>
 
     <section>
-      <h2>Work Experience</h2>
+      <h2>Major Contributions</h2>
 
-      <!-- Each role is grouped as a separate content unit -->
       <article>
-        <h3>Professor of Cognitive Science</h3>
-        <p>University of California, San Diego</p>
+        <h3>User-Centered Design</h3>
+        <p>Introduced principles of designing systems around user goals, tasks, and mental models.</p>
       </article>
 
       <article>
-        <h3>Director, Design Lab</h3>
-        <p>Founder of the Nielsen Norman Group</p>
+        <h3>Seven Stages of Action</h3>
+        <p>Outlined how users form goals, execute actions, perceive outcomes, and evaluate results.</p>
       </article>
+
+      <article>
+        <h3>Bridging Gulfs</h3>
+        <p>Conceptualized the Gulf of Execution and Gulf of Evaluation to identify interaction challenges.</p>
+      </article>
+    </section>
+
+    <section>
+      <h2>Impact on HCI</h2>
+      <p>
+        Norman’s frameworks directly influenced usability evaluation methods,
+        including how designers apply GOMS and KLM models to predict user performance
+        and improve interface design.
+      </p>
     </section>
 
   </main>
 
-  <!-- Footer contains supplementary navigation and meta information -->
   <footer>
     <p><a href="index.html">Back to Home</a></p>
   </footer>
 
 </body>
 </html>
+<!-- Reference Section -->
+<section>
+  <h3>Reference</h3>
+  <p>
+    Dix, Finlay, Abowd & Beale, <em>Human–Computer Interaction</em>, 3rd edition, Chapters 9 & 12, pp. 346–355, 431–437.
+  </p>
+</section>
