--- a/assignment01.html
+++ b/assignment01.html
@@ -44,12 +44,15 @@
 
   <nav aria-label="Primary navigation">
     <ul>
-      <li><a href="index.html">Home</a></li>
+    <li><a href="index.html" aria-current="page">Home</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="analysis.html">Interaction Analysis</a></li>
       <li><a href="norman2klm.html">Norman–GOMS–KLM</a></li>
-      <li><a href="assignment01.html" aria-current="page">Lab 01 Rules</a></li>
+      <li><a href="comparison.html">HCI Model Comparison</a></li>
+      <li><a href="error&correction.html">HTML Errors & Correction</a></li>
+      <li><a href="model.html">Worked Examples / Model</a></li>
+      <li><a href="assignment01.html">Lab 01 Rules</a></li>
     </ul>
   </nav>
 
