--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,12 @@
       <li><a href="cv.html">CV</a></li>
 
       <!-- Current page is indicated using aria-current -->
-      <li><a href="contact.html" aria-current="page">Contact</a></li>
-
+      <li><a href="contact.html">Contact</a></li>
       <li><a href="analysis.html">Interaction Analysis</a></li>
       <li><a href="norman2klm.html">Norman–GOMS–KLM</a></li>
+      <li><a href="comparison.html">HCI Model Comparison</a></li>
+      <li><a href="error&correction.html">HTML Errors & Correction</a></li>
+      <li><a href="model.html">Worked Examples / Model</a></li>
       <li><a href="assignment01.html">Lab 01 Rules</a></li>
 
     </ul>
